fix for z-index for photo and footer

--- a/style.sass
+++ b/style.sass
@@ -335,7 +335,14 @@ $ss-side-width: 80px
 
 #ss-graphicd
   height: 600px
+
 #ss-photo
+  z-index: 90
+
+#ss-photo .circle-photo
+  cursor: url("img/magnifyglass.png"), auto
+
+#ss-footer
   z-index: 90
 
 .ss-row
